umol-models-graph/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@rdkit_CrBz.mol.snap
---
source: umol-models-graph/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule_lenient
category: molecule_lenient
molecule:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 23, col 0"
molecule_lenient:
  success: true
  summary:
    sum_formula: C6Cr
    atom_count: 7
    bond_count: 12
    property_count: 0
extended_molecule:
  success: false
  error:
    error_type: InvalidPropertyLine
    message: "Invalid property line at line 23, col 0"
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C6Cr
    atom_count: 7
    bond_count: 12
    extended_atoms: 0
    extended_bonds: 6
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
